<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <TextView
        android:id="@+id/companyName"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/company_name"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyNameDynamical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/companyName"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/companyAge"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/company_age"
        app:layout_constraintStart_toStartOf="@+id/companyName"
        app:layout_constraintTop_toBottomOf="@+id/companyName" />

    <TextView
        android:id="@+id/companyAgeDynamical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/companyAge"
        app:layout_constraintTop_toBottomOf="@+id/companyName" />

    <TextView
        android:id="@+id/companyCompetences"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        android:text="@string/company_competences"
        app:layout_constraintStart_toStartOf="@+id/companyAge"
        app:layout_constraintTop_toBottomOf="@+id/companyAge"
        tools:layout_editor_absoluteX="8dp" />

    <TextView
        android:id="@+id/companyCompetencesDynamical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="8dp"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/companyCompetences"
        app:layout_constraintTop_toBottomOf="@+id/companyCompetences" />

    <ListView
        android:id="@+id/employeesList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/companyCompetencesDynamical" />
</android.support.constraint.ConstraintLayout>